<resources>
    <string name="app_name">Chat Exchange</string>

    <!-- Authenticator activity -->
    <string name="activity_authenticator_description">Please enter the credentials for your Stack Exchange account to login.</string>
    <string name="activity_authenticator_email">Email</string>
    <string name="activity_authenticator_password">Password</string>
    <string name="activity_authenticator_submit">Submit</string>
    <string name="activity_authenticator_progress_title">Signing In</string>
    <string name="activity_authenticator_error_ok">OK</string>
    <string name="activity_authenticator_error_title">Error</string>
    <string name="activity_authenticator_error_message">An unexpected error has occurred. This may be caused by invalid credentials.\n\nTechnical details: %1$s.</string>
    <string name="activity_authenticator_show_password">Show Password</string>

    <string name="se_auth_unable_to_read_url">unable to read auth URL</string>
    <string name="se_auth_unable_to_read_fkey">unable to read network fkey</string>
    <string name="se_auth_unable_to_confirm_openid">unable to confirm OpenID transaction</string>
    <string name="se_auth_unable_to_read_session">unable to read session information</string>

    <string name="activity_main_add_account">Add New Account</string>
    <string name="activity_main_add_chat">Add Chat</string>
    <string name="activity_main_delete_chat_title">Remove Chat?</string>
    <string name="activity_main_delete_chat_message">Are you sure you want to remove this chat?</string>
    <string name="activity_main_chat_url">Choose root domain</string>
    <string name="activity_main_chat_url_hint">Enter chat ID</string>

    <string name="options_menu_settings">Settings</string>
    <string name="options_menu_about">About</string>
    <string name="options_menu_browser">Open In Browser</string>
    <string name="options_menu_help">Help</string>

    <string name="generic_yes">Yes</string>
    <string name="generic_no">No</string>
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>

    <!-- Intro activity -->
    <string name="intro_slide_welcome_text">Welcome to Chat Exchange! Thanks for downloading our app :)</string>
    <string name="intro_slide_chat_network">Chat Exchange is an Android client for the Stack Exchange chat network. You will need a Stack Exchange account in order to use this app.</string>
    <string name="intro_slide_notifications">Chat Exchange makes participating in SE chatrooms easier by sending you push notifications when your username is mentioned</string>
    <string name="intro_slide_credits">This application was developed by:\n\n10,000 monkeys on the Java islands</string>
    <string name="intro_slide_bugs">If you find a bug or the app crashes on you, please pop us an email at huetoyou@quickmediasolutions.com instead of leaving a 1-star review on the Play Store. We\'ll do our best to get that bug squashed for you! :D</string>
    <string name="intro_slide_tutorial">"This app has a lot of buttons, so here's a quick tutorial to show you around"</string>
    <string name="intro_slide_welcome_title">Hellu there!</string>
    <string name="intro_slide_chat_network_title">Chat Network</string>
    <string name="intro_slide_notifications_title">Notifications</string>
    <string name="intro_slide_credits_title">Credits</string>
    <string name="intro_slide_bugs_title">Bugs?</string>
    <string name="intro_slide_tutorial_title">Tutorial</string>

    <!-- Tutorial activity -->
    <string name="chatrooms_slidingMenu_chats_tutorial_text">Any chatrooms that you add will appear in this list.</string>
    <string name="chatrooms_slidingMenu_chats_tutorial_swipe_left_text">Swipe right on a chat item to reveal the close button.</string>
    <string name="chatrooms_slidingMenu_FAM_tutorial_text">This floating action menu contains a few different things.</string>
    <string name="chatrooms_slidingMenu_homeFAB_tutorial_text">Click this button to return to the home page of the app.</string>
    <string name="chatrooms_slidingMenu_addChatFAB_tutorial_text">Click this button to add a new chatroom.</string>
    <string name="chatrooms_slidingMenu_removeALlChatsFAB_tutorial_text">Click this button to remove all the chatrooms that you\'ve added.</string>
    <string name="homeFrag_hamburger_tutorial_text">Click this hamburger menu to open the list of chatrooms. You can also swipe inwards from the left edge of the screen.</string>
    <string name="homeFrag_options_menu_tutorial_text">Click here for some extra things, like settings or a chat explorer.</string>
    <string name="chatFrag_hamburger_tutorial_text">The hamburger menu is also accessible from a chatroom.</string>
    <string name="chatFrag_FAM_tutorial_text">This floating action menu contains a few different things.</string>
    <string name="chatFrag_showUsersFAB_tutorial_text">Click this button to open the sliding panel containing the list of users currently in the chatroom. You can also swipe inwards from the right edge of the screen.</string>
    <string name="chatFrag_roomInfoFAB_tutorial_text">Click this button to open a popup containing the chatroom\'s description.</string>
    <string name="chatFrag_starredMessagesFAB_tutorial_text">Click this button to open a popup containing messages currently on the starwall.</string>
    <string name="chatFrag_messageEntryBox_tutorial_text">To send a message, first type it into this box.</string>
    <string name="chatFrag_sendMsgBtn_tutorial_text">After you\'ve typed the message into the box, you can send it off to the interwebs by pushing this button.</string>
    <string name="chatFrag_openInBrowserFAB_tutorial_text">Click this button to open the current chatroom in the web browser application.</string>
    <string name="chatFrag_usersSlidingPanel_tutorial_text">Any users currently in the room will show up here. (Psst. it scrolls)</string>
    <string name="chatFrag_usersSlidingPanel_tutorial_text_more">Tap or long-press any tile for more info about that user.</string>
    <string name="chatFrag_normalUser_tutorial_text">A normal user will have no special formatting applied to their username.</string>
    <string name="chatFrag_modUser_tutorial_text">A moderator\'s username will be bold, and light blue.</string>
    <string name="chatFrag_ROuser_tutorial_text">A room owner\'s username will be bold, and also be in  italics.</string>
    <string name="chatFrag_usersSlidingPanel_tutorial_text_title_main">Users</string>
    <string name="chatFrag_usersSlidingPanel_tutorial_text_title_user_normal">Average Joe</string>
    <string name="chatFrag_usersSlidingPanel_tutorial_text_title_user_mod">Moderator</string>
    <string name="chatFrag_usersSlidingPanel_tutorial_text_title_user_owner">Owner</string>
    <string name="chatrooms_slidingMenu_chats_tutorial_text_title">Chats</string>
    <string name="chatrooms_slidingMenu_chats_tutorial_text_swipe_delete">Swipe to Delete</string>
    <string name="tutorial_menu">Menu</string>
    <string name="tutorial_home">Home</string>
    <string name="tutorial_add">Add Chat</string>
    <string name="tutorial_remove_all">Remove all Chats</string>
    <string name="tutorial_info">Info</string>
    <string name="tutorial_stars">Stars</string>
    <string name="tutorial_open_browser">Open in Browser</string>
    <string name="tutorial_msg_box">Message Box</string>
    <string name="tutorial_send_btn">Send Message</string>
    <string name="tutorial_drawer">Drawer</string>


    <!-- Chatrooms exploration activity -->
    <string name="tab_se_title">SE Rooms</string>
    <string name="tab_so_title">SO Rooms</string>
    <string name="tab_hue_title">Huehuehue</string>
    <string name="CEA_SErooms_tab_tutorial_heading">SE Rooms</string>
    <string name="CEA_SOrooms_tab_tutorial_heading">SO Rooms</string>
    <string name="CEA_SErooms_tab_tutorial_text">Click this tab to browse chatrooms on the main SE site. Clicking on a name will automatically add that chatroom to this app.</string>
    <string name="CEA_SOrooms_tab_tutorial_text">Click this tab to browse chatrooms only on Stack Overflow.Once again, clicking on a name will automatically add that chatroom to this app.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->


    <string name="current_users">Current Users</string>
    <string name="loading">Loading&#8230;</string>
    <string name="user_info">User Info</string>
    <string name="chatrooms">Chatrooms</string>

    <string name="stackoverflow">https://chat.stackoverflow.com/</string>
    <string name="stackexchange">https://chat.stackexchange.com/</string>
    <string name="show_chats">Show Chats</string>

    <string name="user_id">User ID:</string>
    <string name="user_last_talked">Last Talk Time:</string>
    <string name="user_rep">Reputation:</string>

    <string name="huetoyou">HueToYou</string>

    <string name="stars">Stars</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="open_in_webview">Open in WebView</string>

    <string name="sename">StackExchange</string>
    <string name="soname">StackOverflow</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_chatrooms_exploration">Explore Chatrooms</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="offline_msg">Looks like you\'re offline. RIP. Check to make sure that your mobile data and/or Wi-Fi is on</string>
    <string name="help_FAQ">FAQ:\n\nQ: Why is this app so buggy?\nA: Because @GeorgeTheDev worked on it\n\nQ: Why doesn\'t this app\'s core functionality (participating in SE chatrooms) work?\nA: Because @TheWanderer was constantly pinging @NathanOsman to work on it, and Nathan didn\'t want to so he went and hid in @ThomasWard\'s basement, where he would have easy access to LAZORS in order to terminate @TheWanderer\'s annoying pings\n\nQ: Why am I even wasting my time to write this nonsense?\nA: *shrugs*</string>
</resources>
